trunk/Archive2/cc/3a3415bafc89bb/output
main.cpp: In function 'int safe(double, double)':
main.cpp:4:5: error: expected initializer before 'fstream'
     fstream out;
     ^
main.cpp:5:2: error: 'out' was not declared in this scope
  out.open("data.txt", ios::out);
  ^
main.cpp:5:23: error: 'ios' has not been declared
  out.open("data.txt", ios::out);
                       ^
main.cpp:6:7: error: 'iterator' was not declared in this scope
  for (iterator = begin; iterator != end; ++iterator){
       ^
main.cpp:7:14: error: expected primary-expression before ')' token
   out << (*It).name << " \n";         
              ^
main.cpp:8:14: error: expected primary-expression before ')' token
   out << (*It).surname << " \n";
              ^
main.cpp:9:14: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
              ^
main.cpp:9:36: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
                                    ^
main.cpp:9:56: error: expected primary-expression before ')' token
   out << (*It).games << " " << (*It).won << " " << (*It).same << " " << 
                                                        ^
main.cpp:10:7: error: expected primary-expression before ')' token
   (*It).lost << " "<< (*It).money << "\n";
       ^
main.cpp:10:27: error: expected primary-expression before ')' token
   (*It).lost << " "<< (*It).money << "\n";
                           ^
main.cpp:14:10: error: expected '}' at end of input
  return 0;
          ^
